--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": "^1.7.5"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.3"
+    "angular2": "2.0.0-beta.3",
+    "rxjs": "5.0.0-beta.0",
+    "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
   }
 }
