--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng2-prism",
   "version": "1.0.1",
   "description": "An example repository for building your own Angular 2 library",
-  "main": "ng2-prism.js",
+  "main": "codeblock.js",
   "scripts": {
     "watch": "tsc -w",
     "build": "rm -rf dist && tsc"
@@ -18,6 +18,7 @@
   ],
   "author": "Tim Padjen",
   "license": "MIT",
+  "typings": "./codeblock.d.ts",
   "bugs": {
     "url": "https://github.com/tpadjen/ng2-prism/issues"
   },
