--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
   "devDependencies": {
-    "typescript": "^1.7.5"
-  },
-  "dependencies": {
+    "typescript": "^1.7.5",
     "angular2": "2.0.0-beta.3",
     "rxjs": "5.0.0-beta.0",
+    "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
+  },
+  "peerDependencies": {
+    "angular2": "2.x",
+    "rxjs": "5.x",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
   }
 }
