--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
   "devDependencies": {
     "typescript": "^1.7.5",
-    "angular2": "2.0.0-beta.3",
+    "angular2": "2.0.0-beta.6",
     "rxjs": "5.0.0-beta.0",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
   },
   "peerDependencies": {
-    "angular2": "2.x",
-    "rxjs": "5.x",
+    "angular2": "2.0.0-beta.6",
+    "rxjs": "5.0.0-beta.0",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
   }
 }
