--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
   "devDependencies": {
-    "typescript": "^1.7.5",
+    "typescript": "1.7.5",
     "angular2": "2.0.0-beta.6",
     "rxjs": "5.0.0-beta.0",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
