--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "removeComments": true,
-    "sourceMap": true,
-    "outDir": "dist",
+    "sourceMap": false,
+    "outDir": "bundle",
     "declaration": true
   },
   "files": [
