--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "jspm": "^0.16.27",
+    "node-sass": "^3.4.2",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.0",
