--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "es6-shim": "^0.33.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.0",
-    "zone.js": "^0.5.14",
-    "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
+    "zone.js": "^0.5.14"
   },
   "jspm": {
     "dependencies": {
