--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   },
   "jspm": {
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.6",
-      "prism": "github:PrismJS/prism@gh-pages"
+      "angular2": "npm:angular2@^2.0.0-beta.6"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
