--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "jspm": {
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.6"
+      "angular2": "npm:angular2@^2.0.0-beta.6",
+      "rxjs": "npm:rxjs@^5.0.0-beta.2"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
