--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular2": "^2.0.0-beta.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.13",
+    "ng2-prism": "^1.3.1",
     "reflect-metadata": "^0.1.2",
     "rxjs": "^5.0.0-beta.2",
     "zone.js": "^0.5.11"
