--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     }
   },
   "devDependencies": {
+    "connect-history-api-fallback": "^1.1.0",
     "gulp": "^3.9.1",
     "gulp-shell": "^0.5.2",
     "jspm": "^0.16.27",
