--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,116 @@
     "declaration": true
   },
   "files": [
-    "src/codeblock.component.ts"
+    "src/codeblock.component.ts",
+    "src/languages/abap.ts",
+    "src/languages/actionscript.ts",
+    "src/languages/apacheconf.ts",
+    "src/languages/apl.ts",
+    "src/languages/applescript.ts",
+    "src/languages/asciidoc.ts",
+    "src/languages/aspnet.ts",
+    "src/languages/autohotkey.ts",
+    "src/languages/autoit.ts",
+    "src/languages/bash.ts",
+    "src/languages/basic.ts",
+    "src/languages/batch.ts",
+    "src/languages/bison.ts",
+    "src/languages/brainfuck.ts",
+    "src/languages/c.ts",
+    "src/languages/clike.ts",
+    "src/languages/coffeescript.ts",
+    "src/languages/core.ts",
+    "src/languages/cpp.ts",
+    "src/languages/crystal.ts",
+    "src/languages/csharp.ts",
+    "src/languages/css.ts",
+    "src/languages/d.ts",
+    "src/languages/dart.ts",
+    "src/languages/diff.ts",
+    "src/languages/docker.ts",
+    "src/languages/eiffel.ts",
+    "src/languages/elixir.ts",
+    "src/languages/erlang.ts",
+    "src/languages/fortran.ts",
+    "src/languages/fsharp.ts",
+    "src/languages/gherkin.ts",
+    "src/languages/git.ts",
+    "src/languages/glsl.ts",
+    "src/languages/go.ts",
+    "src/languages/groovy.ts",
+    "src/languages/haml.ts",
+    "src/languages/handlebars.ts",
+    "src/languages/haskell.ts",
+    "src/languages/haxe.ts",
+    "src/languages/http.ts",
+    "src/languages/icon.ts",
+    "src/languages/inform7.ts",
+    "src/languages/ini.ts",
+    "src/languages/j.ts",
+    "src/languages/jade.ts",
+    "src/languages/java.ts",
+    "src/languages/javascript.ts",
+    "src/languages/json.ts",
+    "src/languages/jsx.ts",
+    "src/languages/julia.ts",
+    "src/languages/keyman.ts",
+    "src/languages/kotlin.ts",
+    "src/languages/latex.ts",
+    "src/languages/less.ts",
+    "src/languages/lolcode.ts",
+    "src/languages/lua.ts",
+    "src/languages/makefile.ts",
+    "src/languages/markdown.ts",
+    "src/languages/markup.ts",
+    "src/languages/matlab.ts",
+    "src/languages/mel.ts",
+    "src/languages/mizar.ts",
+    "src/languages/monkey.ts",
+    "src/languages/nasm.ts",
+    "src/languages/nginx.ts",
+    "src/languages/nim.ts",
+    "src/languages/nix.ts",
+    "src/languages/nsis.ts",
+    "src/languages/objectivec.ts",
+    "src/languages/ocaml.ts",
+    "src/languages/oz.ts",
+    "src/languages/parigp.ts",
+    "src/languages/parser.ts",
+    "src/languages/pascal.ts",
+    "src/languages/perl.ts",
+    "src/languages/php.ts",
+    "src/languages/powershell.ts",
+    "src/languages/processing.ts",
+    "src/languages/prolog.ts",
+    "src/languages/puppet.ts",
+    "src/languages/pure.ts",
+    "src/languages/python.ts",
+    "src/languages/q.ts",
+    "src/languages/qore.ts",
+    "src/languages/r.ts",
+    "src/languages/rest.ts",
+    "src/languages/rip.ts",
+    "src/languages/roboconf.ts",
+    "src/languages/ruby.ts",
+    "src/languages/rust.ts",
+    "src/languages/sas.ts",
+    "src/languages/sass.ts",
+    "src/languages/scala.ts",
+    "src/languages/scheme.ts",
+    "src/languages/scss.ts",
+    "src/languages/smalltalk.ts",
+    "src/languages/smarty.ts",
+    "src/languages/sql.ts",
+    "src/languages/stylus.ts",
+    "src/languages/swift.ts",
+    "src/languages/tcl.ts",
+    "src/languages/textile.ts",
+    "src/languages/twig.ts",
+    "src/languages/typescript.ts",
+    "src/languages/verilog.ts",
+    "src/languages/vhdl.ts",
+    "src/languages/vim.ts",
+    "src/languages/wiki.ts",
+    "src/languages/yaml.ts"
   ]
 }
