--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "codeblock.js",
   "scripts": {
     "watch": "tsc -w",
-    "build": "npm run import-langs && npm run build-directives && rm -rf bundle && tsc && node bundle.js && npm run build-langs",
+    "build": "npm run import-langs && npm run build-directives && rm -rf bundle && tsc && node tasks/bundleComponent.js && npm run build-langs",
     "build-directives": "node tasks/buildLanguageDirectives.js",
     "import-langs": "node tasks/importPrismLanguages.js",
     "build-langs": "node tasks/bundleCompiledLanguages.js",
