--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "angular2": "^2.0.0-beta.6",
+    "animate.css": "git+ssh://git@github.com/daneden/animate.css.git",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.13",
     "ng2-prism": "^2.0.1",
