--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs-builder": "^0.15.7",
     "typescript": "1.7.5",
+    "underscore": "^1.8.3",
     "zone.js": "0.5.15"
   },
   "peerDependencies": {
@@ -52,7 +53,8 @@
   "jspm": {
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-beta.7",
-      "rxjs": "npm:rxjs@^5.0.0-beta.2"
+      "rxjs": "npm:rxjs@^5.0.0-beta.2",
+      "underscore": "npm:underscore@^1.8.3"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.8.2"
