Move rendering to subcomponent
The processing and highlighting of the codeblock is now done by a subcomponent, CodeRenderer.
Template tags, styling tags, and some spacing added by the standard angular2 structural tags are
removed. Markup has starting angle brackets converted to their html entity version to ensure
proper display.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
   },
   "files": [
     "src/codeblock.component.ts",
+    "src/code-renderer.component.ts",
     "src/src.service.ts",
     "src/languages/abap.ts",
     "src/languages/actionscript.ts",
