--- a/package.json
+++ b/package.json
@@ -28,34 +28,34 @@
   },
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
   "devDependencies": {
-    "angular2": "2.0.0-beta.6",
+    "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "jspm": "^0.16.27",
     "node-sass": "^3.4.2",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "0.1.2",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.0-beta.0",
+    "rxjs": "5.0.0-beta.2",
     "systemjs-builder": "^0.15.7",
     "typescript": "1.7.5",
-    "zone.js": "^0.5.14"
+    "zone.js": "0.5.15"
   },
   "peerDependencies": {
-    "angular2": "2.0.0-beta.6",
+    "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "^0.5.14"
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.5.15"
   },
   "jspm": {
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.6",
+      "angular2": "npm:angular2@^2.0.0-beta.7",
       "rxjs": "npm:rxjs@^5.0.0-beta.2"
     },
     "devDependencies": {
-      "typescript": "npm:typescript@^1.6.2"
+      "typescript": "npm:typescript@^1.8.2"
     }
   }
 }
