--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "jspm": {
     "registry": "github",
     "dependencies": {
-      "angular2": "npm:angular2@2.0.0-beta.6",
+      "angular2": "npm:angular2@2.0.0-beta.7",
       "clean-css": "npm:clean-css@^3.4.9",
       "ng2-prism": "npm:ng2-prism@^2.0.2",
       "normalize.css": "necolas/normalize.css@^3.0.3",
       "reflect-metadata": "npm:reflect-metadata@^0.1.2",
       "rxjs": "npm:rxjs@^5.0.0-beta.2",
-      "zone.js": "npm:zone.js@^0.5.10"
+      "zone.js": "npm:zone.js@^0.5.15"
     },
     "devDependencies": {
       "css": "frankwallis/plugin-css@master",
       "ts": "frankwallis/plugin-typescript@^3.0.0",
-      "typescript": "npm:typescript@^1.6.2"
+      "typescript": "npm:typescript@^1.8.2"
     }
   },
   "devDependencies": {
@@ -34,13 +34,13 @@
     "run-sequence": "^1.1.5"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.6",
+    "angular2": "2.0.0-beta.7",
     "animate.css": "git+ssh://git@github.com/daneden/animate.css.git",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.13",
+    "es6-shim": "^0.33.3",
     "ng2-prism": "^2.0.1",
-    "reflect-metadata": "^0.1.2",
-    "rxjs": "^5.0.0-beta.2",
-    "zone.js": "^0.5.11"
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.5.15"
   }
 }
