--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "registry": "github",
     "dependencies": {
       "angular2": "npm:angular2@2.0.0-beta.7",
+      "animate.css": "npm:animate.css@^3.5.1",
       "clean-css": "npm:clean-css@^3.4.9",
       "ng2-prism": "npm:ng2-prism@2.1.7",
       "normalize.css": "necolas/normalize.css@^3.0.3",
