Remove excessive bundling
Build javascript using tsc then use systemjs builder to bundle. Remove
everything from bundles except codeblock.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 npm-debug.log
 node_modules
-jspm_packages
 .idea
 app
 dist
 build
-bundle
+bundles
 languages
 languages.d.ts
 languages.js
+**/*.d.ts
+src/*.js
+src/*.js.map
+src/languages
+codeblock.js
+typings
+*.js.map
