--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 npm-debug.log
 node_modules
-jspm_packages
 .idea
 app
 dist
 build
-bundle
+bundles
 languages
 languages.d.ts
 languages.js
+**/*.d.ts
+src/*.js
+codeblock.js
