--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "An example repository for building your own Angular 2 library",
   "main": "codeblock.js",
   "scripts": {
+    "make": "node tasks/make.js",
     "watch": "tsc -w",
-    "build": "npm run import-langs && npm run build-directives && rm -rf bundle && tsc && node tasks/bundleComponent.js && npm run build-langs",
+    "build": "npm run import-langs && npm run build-directives && rm -rf bundle && tsc && npm run build-css && node tasks/make.js && npm run bundle-langs",
     "build-directives": "node tasks/buildLanguageDirectives.js",
     "import-langs": "node tasks/importPrismLanguages.js",
-    "build-langs": "node tasks/bundleCompiledLanguages.js",
+    "bundle-langs": "node tasks/bundleCompiledLanguages.js",
+    "build-css": "node tasks/buildCSS.js",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -31,7 +33,6 @@
     "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    "jspm": "^0.16.27",
     "node-sass": "^3.4.2",
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages",
     "reflect-metadata": "0.1.2",
@@ -43,19 +44,10 @@
   },
   "peerDependencies": {
     "angular2": "2.0.0-beta.7",
-    "es6-promise": "^3.0.2",
+    "es6-promise": "3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.5.15"
-  },
-  "jspm": {
-    "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-beta.7",
-      "rxjs": "npm:rxjs@^5.0.0-beta.2"
-    },
-    "devDependencies": {
-      "typescript": "npm:typescript@^1.8.2"
-    }
   }
 }
