--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
   "compileOnSave": false,
   "buildOnSave": false,
   "files": [
+    "typings/browser.d.ts",
     "codeblock.ts",
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
