--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "url": "https://github.com/tpadjen/ng2-prism/issues"
   },
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
+  "dependencies": {
+    "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
+  },
   "devDependencies": {
     "angular2": "2.0.0-beta.7",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "node-sass": "^3.4.2",
-    "prismjs": "git://github.com/PrismJS/prism.git#gh-pages",
     "reflect-metadata": "0.1.2",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.2",
