--- a/package.json
+++ b/package.json
@@ -34,23 +34,23 @@
     "prismjs": "git://github.com/PrismJS/prism.git#gh-pages"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.7",
+    "angular2": "2.0.0-beta.11",
     "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "es6-shim": "^0.35.0",
     "node-sass": "^3.4.2",
     "reflect-metadata": "0.1.2",
     "rimraf": "^2.5.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs-builder": "^0.15.7",
     "typescript": "1.7.5",
-    "zone.js": "0.5.15"
+    "zone.js": "0.6.4"
   },
   "peerDependencies": {
-    "angular2": "2.0.0-beta.7",
-    "es6-promise": "3.0.2",
-    "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "angular2": ">= 2.0.0-beta.11",
+    "es6-promise": ">= 3.0.2",
+    "es6-shim": ">= 0.35.0",
+    "reflect-metadata": ">= 0.1.2",
+    "rxjs": ">= 5.0.0-beta.2",
+    "zone.js": ">= 0.6.4"
   }
 }
