--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-prism",
-  "version": "2.1.7",
+  "name": "ng2-prism-test-1",
+  "version": "0.0.1",
   "description": "An example repository for building your own Angular 2 library",
   "main": "codeblock.js",
   "scripts": {
