--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "make": "node tasks/make.js",
     "watch": "tsc -w",
-    "build": "npm run import-langs && npm run build-directives && rm -rf bundle && tsc && npm run build-css && node tasks/make.js && npm run bundle-langs",
+    "build": "npm run build-directives && rm -rf bundle && tsc && npm run build-css && node tasks/make.js",
     "build-directives": "node tasks/buildLanguageDirectives.js",
-    "import-langs": "node tasks/importPrismLanguages.js",
     "bundle-langs": "node tasks/bundleCompiledLanguages.js",
     "build-css": "node tasks/buildCSS.js",
     "prepublish": "npm run build",
