--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+  "compileOnSave": false,
+  "buildOnSave": false,
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -10,8 +12,6 @@
     "inlineSources": true,
     "declaration": true
   },
-  "compileOnSave": false,
-  "buildOnSave": false,
   "exclude": [
     "node_modules",
     "typings/main",
@@ -23,114 +23,114 @@
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
     "src/src.service.ts",
-    "src/languages/abap.ts",
-    "src/languages/actionscript.ts",
-    "src/languages/apacheconf.ts",
-    "src/languages/apl.ts",
-    "src/languages/applescript.ts",
-    "src/languages/asciidoc.ts",
-    "src/languages/aspnet.ts",
-    "src/languages/autohotkey.ts",
-    "src/languages/autoit.ts",
-    "src/languages/bash.ts",
-    "src/languages/basic.ts",
-    "src/languages/batch.ts",
-    "src/languages/bison.ts",
-    "src/languages/brainfuck.ts",
-    "src/languages/c.ts",
-    "src/languages/clike.ts",
-    "src/languages/coffeescript.ts",
-    "src/languages/cpp.ts",
-    "src/languages/crystal.ts",
-    "src/languages/csharp.ts",
-    "src/languages/css.ts",
-    "src/languages/d.ts",
-    "src/languages/dart.ts",
-    "src/languages/diff.ts",
-    "src/languages/docker.ts",
-    "src/languages/eiffel.ts",
-    "src/languages/elixir.ts",
-    "src/languages/erlang.ts",
-    "src/languages/fortran.ts",
-    "src/languages/fsharp.ts",
-    "src/languages/gherkin.ts",
-    "src/languages/git.ts",
-    "src/languages/glsl.ts",
-    "src/languages/go.ts",
-    "src/languages/groovy.ts",
-    "src/languages/haml.ts",
-    "src/languages/handlebars.ts",
-    "src/languages/haskell.ts",
-    "src/languages/haxe.ts",
-    "src/languages/http.ts",
-    "src/languages/icon.ts",
-    "src/languages/inform7.ts",
-    "src/languages/ini.ts",
-    "src/languages/j.ts",
-    "src/languages/jade.ts",
-    "src/languages/java.ts",
-    "src/languages/javascript.ts",
-    "src/languages/json.ts",
-    "src/languages/jsx.ts",
-    "src/languages/julia.ts",
-    "src/languages/keyman.ts",
-    "src/languages/kotlin.ts",
-    "src/languages/latex.ts",
-    "src/languages/less.ts",
-    "src/languages/lolcode.ts",
-    "src/languages/lua.ts",
-    "src/languages/makefile.ts",
-    "src/languages/markdown.ts",
-    "src/languages/markup.ts",
-    "src/languages/matlab.ts",
-    "src/languages/mel.ts",
-    "src/languages/mizar.ts",
-    "src/languages/monkey.ts",
-    "src/languages/nasm.ts",
-    "src/languages/nginx.ts",
-    "src/languages/nim.ts",
-    "src/languages/nix.ts",
-    "src/languages/nsis.ts",
-    "src/languages/objectivec.ts",
-    "src/languages/ocaml.ts",
-    "src/languages/oz.ts",
-    "src/languages/parigp.ts",
-    "src/languages/parser.ts",
-    "src/languages/pascal.ts",
-    "src/languages/perl.ts",
-    "src/languages/php.ts",
-    "src/languages/powershell.ts",
-    "src/languages/processing.ts",
-    "src/languages/prolog.ts",
-    "src/languages/puppet.ts",
-    "src/languages/pure.ts",
-    "src/languages/python.ts",
-    "src/languages/q.ts",
-    "src/languages/qore.ts",
-    "src/languages/r.ts",
-    "src/languages/rest.ts",
-    "src/languages/rip.ts",
-    "src/languages/roboconf.ts",
-    "src/languages/ruby.ts",
-    "src/languages/rust.ts",
-    "src/languages/sas.ts",
-    "src/languages/sass.ts",
-    "src/languages/scala.ts",
-    "src/languages/scheme.ts",
-    "src/languages/scss.ts",
-    "src/languages/smalltalk.ts",
-    "src/languages/smarty.ts",
-    "src/languages/sql.ts",
-    "src/languages/stylus.ts",
-    "src/languages/swift.ts",
-    "src/languages/tcl.ts",
-    "src/languages/textile.ts",
-    "src/languages/twig.ts",
-    "src/languages/typescript.ts",
-    "src/languages/verilog.ts",
-    "src/languages/vhdl.ts",
-    "src/languages/vim.ts",
-    "src/languages/wiki.ts",
-    "src/languages/yaml.ts"
+    "languages/abap.ts",
+    "languages/actionscript.ts",
+    "languages/apacheconf.ts",
+    "languages/apl.ts",
+    "languages/applescript.ts",
+    "languages/asciidoc.ts",
+    "languages/aspnet.ts",
+    "languages/autohotkey.ts",
+    "languages/autoit.ts",
+    "languages/bash.ts",
+    "languages/basic.ts",
+    "languages/batch.ts",
+    "languages/bison.ts",
+    "languages/brainfuck.ts",
+    "languages/c.ts",
+    "languages/clike.ts",
+    "languages/coffeescript.ts",
+    "languages/cpp.ts",
+    "languages/crystal.ts",
+    "languages/csharp.ts",
+    "languages/css.ts",
+    "languages/d.ts",
+    "languages/dart.ts",
+    "languages/diff.ts",
+    "languages/docker.ts",
+    "languages/eiffel.ts",
+    "languages/elixir.ts",
+    "languages/erlang.ts",
+    "languages/fortran.ts",
+    "languages/fsharp.ts",
+    "languages/gherkin.ts",
+    "languages/git.ts",
+    "languages/glsl.ts",
+    "languages/go.ts",
+    "languages/groovy.ts",
+    "languages/haml.ts",
+    "languages/handlebars.ts",
+    "languages/haskell.ts",
+    "languages/haxe.ts",
+    "languages/http.ts",
+    "languages/icon.ts",
+    "languages/inform7.ts",
+    "languages/ini.ts",
+    "languages/j.ts",
+    "languages/jade.ts",
+    "languages/java.ts",
+    "languages/javascript.ts",
+    "languages/json.ts",
+    "languages/jsx.ts",
+    "languages/julia.ts",
+    "languages/keyman.ts",
+    "languages/kotlin.ts",
+    "languages/latex.ts",
+    "languages/less.ts",
+    "languages/lolcode.ts",
+    "languages/lua.ts",
+    "languages/makefile.ts",
+    "languages/markdown.ts",
+    "languages/markup.ts",
+    "languages/matlab.ts",
+    "languages/mel.ts",
+    "languages/mizar.ts",
+    "languages/monkey.ts",
+    "languages/nasm.ts",
+    "languages/nginx.ts",
+    "languages/nim.ts",
+    "languages/nix.ts",
+    "languages/nsis.ts",
+    "languages/objectivec.ts",
+    "languages/ocaml.ts",
+    "languages/oz.ts",
+    "languages/parigp.ts",
+    "languages/parser.ts",
+    "languages/pascal.ts",
+    "languages/perl.ts",
+    "languages/php.ts",
+    "languages/powershell.ts",
+    "languages/processing.ts",
+    "languages/prolog.ts",
+    "languages/puppet.ts",
+    "languages/pure.ts",
+    "languages/python.ts",
+    "languages/q.ts",
+    "languages/qore.ts",
+    "languages/r.ts",
+    "languages/rest.ts",
+    "languages/rip.ts",
+    "languages/roboconf.ts",
+    "languages/ruby.ts",
+    "languages/rust.ts",
+    "languages/sas.ts",
+    "languages/sass.ts",
+    "languages/scala.ts",
+    "languages/scheme.ts",
+    "languages/scss.ts",
+    "languages/smalltalk.ts",
+    "languages/smarty.ts",
+    "languages/sql.ts",
+    "languages/stylus.ts",
+    "languages/swift.ts",
+    "languages/tcl.ts",
+    "languages/textile.ts",
+    "languages/twig.ts",
+    "languages/typescript.ts",
+    "languages/verilog.ts",
+    "languages/vhdl.ts",
+    "languages/vim.ts",
+    "languages/wiki.ts",
+    "languages/yaml.ts"
   ]
 }
