--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
   "files": [
     "typings/browser.d.ts",
     "codeblock.ts",
+    "languages.ts",
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
     "src/src.service.ts",
