--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "languages.ts",
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
-    "src/src.service.ts",
+    "src/src.directive.ts",
+    "src/sourcable.ts",
     "languages/abap.ts",
     "languages/actionscript.ts",
     "languages/apacheconf.ts",
