Karma unit testing setup
Install karma and config. Ensure unit tests run correctly. Remove noise
(node_modules, full directroy paths) from karma stack traces.

--- a/.npmignore
+++ b/.npmignore
@@ -11,3 +11,9 @@ typings.json
 !languages/*.d.ts
 src/*.scss
 src/language-template.js
+**/*.ktp.js
+
+tests
+karma-test-shim.js
+karma.conf.js
+**/*.ktp.js
