--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     "languages.ts",
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
+    "tests/spec-setup.ts",
+    "tests/code-renderer.component.spec.ts",
     "languages/abap.ts",
     "languages/actionscript.ts",
     "languages/apacheconf.ts",
