--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "src/codeblock.component.ts",
     "src/code-renderer.component.ts",
     "tests/spec-setup.ts",
+    "tests/codeblock.component.spec.ts",
     "tests/code-renderer.component.spec.ts",
     "languages/abap.ts",
     "languages/actionscript.ts",
