--- a/package.json
+++ b/package.json
@@ -33,32 +33,45 @@
   "homepage": "https://github.com/tpadjen/ng2-prism#readme",
   "dependencies": {
     "ng2-src-directive": "0.0.10",
-    "prismjs": "github:PrismJS/prism@gh-pages"
+    "prismjs": "^1.6.0"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.15",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.35.0",
+    "@angular/common": "~2.2.4",
+    "@angular/compiler": "~2.2.4",
+    "@angular/core": "~2.2.4",
+    "@angular/forms": "~2.2.4",
+    "@angular/http": "~2.2.4",
+    "@angular/platform-browser": "~2.2.4",
+    "@angular/platform-browser-dynamic": "~2.2.4",
+    "@angular/router": "~3.2.4",
+    "core-js": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "github:tpadjen/karma-mocha-reporter",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.25",
-    "karma-typescript-preprocessor": "0.0.21",
+    "karma-spec-reporter": "0.0.26",
+    "karma-typescript-preprocessor": "0.3.0",
     "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.7",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "0.1.8",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.0-beta.2",
+    "rxjs": "5.0.0-rc.5",
     "systemjs-builder": "^0.15.13",
-    "typescript": "1.8.10",
-    "zone.js": "0.6.10"
+    "typescript": "2.0.3",
+    "zone.js": "0.7.2"
   },
   "peerDependencies": {
-    "angular2": ">= 2.0.0-beta.15",
+    "@angular/common": "~2.2.4",
+    "@angular/compiler": "~2.2.4",
+    "@angular/core": "~2.2.4",
+    "@angular/forms": "~2.2.4",
+    "@angular/http": "~2.2.4",
+    "@angular/platform-browser": "~2.2.4",
+    "@angular/platform-browser-dynamic": "~2.2.4",
+    "@angular/router": "~3.2.4",
     "es6-promise": ">= 3.0.2",
     "es6-shim": ">= 0.35.0",
     "reflect-metadata": ">= 0.1.2",
