--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,8 @@
 {
-  "compileOnSave": false,
-  "buildOnSave": false,
   "compilerOptions": {
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
     "lib": [
       "es6",
       "dom"
@@ -23,6 +18,7 @@
     ]
   },
   "exclude": [
+    "node_modules",
     "src/language-template.ts"
   ]
 }
