--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,16 @@
 npm-debug.log
 node_modules/
+
 .idea
-app
 dist
-build
-bundles
-languages
-languages.ts
-languages.d.ts
-languages.js
+temp
+
 **/*.d.ts
 src/*.js
 src/*.js.map
-typings
-*.js.map
+
 tests/*.js
 tests/*.js.map
 tests/*.d.ts
-src/*.js.map
 
-# untracked
-codeblock.js
-codeblock.js.map
-codeblock.d.ts
+src/languages
