--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
   "name": "ng2-prism",
-  "version": "2.3.1",
+  "private" :true,
+  "version": "2.3.1-0",
   "description": "An Angular2 codeblock highlighting component using Prismjs.",
-  "main": "codeblock.js",
   "scripts": {
-    "make": "node tasks/make.js",
-    "watch": "tsc -w",
-    "build": "npm run build-directives && rm -rf bundle && tsc && npm run build-css && node tasks/make.js",
-    "build-directives": "node tasks/buildLanguageDirectives.js",
-    "bundle-langs": "node tasks/bundleCompiledLanguages.js",
-    "build-css": "node tasks/buildCSS.js",
-    "prepublish": "npm run build",
-    "test": "tsc && karma start",
-    "test-single": "tsc && karma start --no-single-run",
-    "test-watch": "tsc && karma start --no-single-run --auto-watch"
+    "build:lang": "node ./tasks/build-language-directives.js",
+    "build:lib": "ngm build -p src",
+    "build": "run-s build:lang build:lib",
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tpadjen/ng2-prism.git"
   },
   "keywords": [
-    "Angular",
-    "2",
+    "angular",
+    "angular 2",
     "Prism"
   ],
   "author": "Tim Padjen",
   "license": "MIT",
-  "typings": "./codeblock.d.ts",
   "bugs": {
     "url": "https://github.com/tpadjen/ng2-prism/issues"
   },
@@ -35,34 +28,47 @@
     "prismjs": "^1.6.0"
   },
   "devDependencies": {
-    "@angular/common": "~2.2.4",
-    "@angular/compiler": "~2.2.4",
-    "@angular/core": "~2.2.4",
-    "@angular/forms": "~2.2.4",
-    "@angular/http": "~2.2.4",
-    "@angular/platform-browser": "~2.2.4",
-    "@angular/platform-browser-dynamic": "~2.2.4",
-    "@angular/router": "~3.2.4",
-    "core-js": "^2.4.1",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/compiler-cli": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "2.3.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/platform-server": "^2.0.0",
+    "@angular/router": "^3.0.0",
+    "@angular/tsc-wrapped": "0.4.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "6.0.48",
+    "@types/prismjs": "1.4.18",
+    "@types/webpack": "2.0.0",
+    "angular-cli": "1.0.0-beta.22-1",
+    "codelyzer": "2.0.0-beta.3",
+    "core.js": "0.4.2",
+    "jasmine": "2.5.2",
+    "jasmine-core": "2.5.2",
+    "jasmine-data-provider": "2.2.0",
+    "jasmine-spec-reporter": "2.7.0",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.1.0",
+    "karma-remap-istanbul": "0.2.1",
+    "ngm-cli": "0.3.4",
     "node-sass": "^3.4.2",
-    "reflect-metadata": "0.1.8",
+    "npm-run-all": "3.1.2",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.0-rc.5",
+    "rxjs": "5.0.0-beta.12",
     "systemjs-builder": "^0.15.13",
-    "typescript": "2.0.3",
-    "zone.js": "0.7.2"
+    "tslint": "4.0.2",
+    "tslint-config-valorsoft": "1.2.0",
+    "typescript": "2.0.10",
+    "zone.js": "0.6.26"
   },
   "peerDependencies": {
-    "@angular/common": "~2.2.4",
-    "@angular/compiler": "~2.2.4",
-    "@angular/core": "~2.2.4",
-    "@angular/forms": "~2.2.4",
-    "@angular/http": "~2.2.4",
-    "@angular/platform-browser": "~2.2.4",
-    "@angular/platform-browser-dynamic": "~2.2.4",
-    "@angular/router": "~3.2.4",
-    "reflect-metadata": ">= 0.1.2",
-    "rxjs": ">= 5.0.0-beta.2",
-    "zone.js": ">= 0.6.10"
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "^2.0.0"
   }
 }
