--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,33 @@ tests/*.js.map
 tests/*.d.ts
 
 src/languages
+
+# IDEs and editors
+/.idea
+/.vscode
+.project
+.classpath
+*.launch
+.settings/
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+
+# ignore build and dist for now
+/dist
+/temp
+/demo/dist
+/demo/temp
+/logs
+
+# e2e
+/demo/e2e/*.js
+/demo/e2e/*.map
+
+#System Files
+.DS_Store
+Thumbs.db
