--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng2-prism-base",
-  "private" :true,
-  "version": "2.3.1-0",
+  "private": true,
+  "version": "2.3.1",
   "description": "An Angular2 codeblock highlighting component using Prismjs.",
   "scripts": {
     "build:lang": "node ./tasks/build-language-directives.js",
