--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-prism",
-  "version": "2.3.1-0",
+  "version": "2.3.1",
   "description": "An Angular2 codeblock highlighting component using Prismjs.",
   "main": "index.js",
   "typings": "index.d.ts",
